--- a/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
@@ -1355,9 +1355,6 @@ int main() {
   res = max(res, cnt_dec);
   res = max(res, cnt_inc);
 
-
-
-
   // вывод результата
   cout &lt;&lt; res;
 }
@@ -1403,6 +1400,60 @@ int main() {
 </pre>
   <code>3</code>
   <p>Во втором примере любая пара клиентов — противоположна.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Пример 3</p>
+<pre>
+5
+0 1 2 2 3
+</pre>
+  <code>0</code>
+
+    <p>Пример 4</p>
+<pre>
+6
+-10 10 -10 10 -10 10
+</pre>
+  <code>9</code>
+
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  // хеш-таблица для всех чисел от -10 до 10
+  vector&lt;long long&gt; A(21,0);
+  int tmp;
+
+  // сразу заполняем хеш-таблицу со сдвигом 10
+  for (int i = 0; i &lt; n; i++) {
+    cin >> tmp;
+    A[tmp+10]++;
+  }
+
+  // решение
+  long long res = 0;
+
+  // считаем пары для 0
+  res += A[10] * (A[10] - 1) / 2;
+
+  // считаем пары для остальных чисел
+  for (int i = 0; i &lt; 10; i++) {
+    res += A[i] * A[20 - i];
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1429,6 +1480,60 @@ int main() {
   <h4>Пример 2</h4>
   <code>1000000001</code>
   <code>YES</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Линейным алгоритмам пройдем по символам строки. Если встретим подряд идущие 7 одинаковых символов, то это опасно, иначе нет.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  string s;
+  cin >> s;
+
+  // решение
+  bool danger = false, c0 = false, c1 = false;
+  int cnt;
+  for (char c : s) {
+    if (c == '0') {
+      if (c0) {
+        cnt++;
+        if (cnt == 7) {
+          danger = true;
+          break;
+        }
+      } else {
+        cnt = 1;
+        c0 = true;
+        c1 = false;
+      }
+    } else if (c == '1') {
+      if (c1) {
+        cnt++;
+        if (cnt == 7) {
+          danger = true;
+          break;
+        }
+      } else {
+        cnt = 1;
+        c1 = true;
+        c0 = false;
+      }
+    }
+  }
+
+  // вывод результата
+  if (danger) {
+    cout &lt;&lt; "YES";
+  } else {
+    cout &lt;&lt; "NO";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1465,6 +1570,85 @@ int main() {
 1 2 3
 </pre>
   <code>2</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Пример 3</p>
+<pre>
+4
+1 2 3 4
+</pre>
+  <code>2</code>
+
+    <p>Пример 4</p>
+<pre>
+6
+1 2 5 6 7 8
+</pre>
+  <code>5</code>
+
+    <p>Пример 5</p>
+<pre>
+6
+1 2 5 6 7 9
+</pre>
+  <code>5</code>
+
+    <p>Пример 6</p>
+<pre>
+6
+1 1 1 1 1 9
+</pre>
+  <code>1</code>
+
+    <p>Пример 7</p>
+<pre>
+6
+5 5 5 5 6 9
+</pre>
+  <code>6</code>
+
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;long long&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  sort(A.begin(), A.end());
+  long long minA = A[0];
+  long long maxA = A[n - 1];
+  double midA = (minA + maxA) / 2.0;
+  long long med = maxA;
+  double delta, minDelta = med;
+  for (int i = 0; i &lt; n; i++) {
+    if (midA == A[i]) {
+      med = A[i];
+      break;
+    } else {
+      delta = abs(midA - A[i]);
+      if (minDelta > delta) {
+        minDelta = delta;
+        med = A[i];
+      }
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; med;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1490,6 +1674,36 @@ int main() {
 2 1 3
 </pre>
   <code>3 2 1 </code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  int tmp;
+  vector&lt;int&gt; A(1e6 + 1, 0);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> tmp;
+    A[tmp]++;
+  }
+
+  // вывод результата
+  for (int i = 1e6; i >= 0; i--) {
+    while (A[i] != 0) {
+      cout &lt;&lt; i &lt;&lt; ' ';
+      A[i]--;
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1533,6 +1747,51 @@ int main() {
 3 3 3 5
 </pre>
   <code>0</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  int tmp;
+  vector&lt;int&gt; A(101, 0);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> tmp;
+    A[tmp]++;
+  }
+
+  // Решение
+  int res = 0;
+  int cnt = 0;
+  for (int i = 1; i &lt;= 100; i++) {
+    while (A[i]>0) {
+      cnt++;
+      A[i]--;
+      if (cnt == 4) {
+        res++;
+        cnt = 0;
+      }
+    }
+    if (cnt == 1) {
+      cnt = 0;
+    }
+    if (cnt == 3) {
+      cnt = 2;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1686,7 +1945,7 @@ int main() {
 1 2
 -1
 </pre>
-<pre>
+<code>
 1
 3
 5
@@ -1697,75 +1956,347 @@ int main() {
 1
 2
 1
+</code>
+
+  <details>
+    <summary>Примечание к примеру</summary>
+    <p><strong>В первом наборе</strong> входных данных все люди хотят занять место 5, поэтому только 1 человек сможет занять место.</p>
+
+    <p><strong>Во втором наборе</strong> входных данных людей можно впустить в порядке 1,2,3,4, тогда все люди, кроме последнего, смогут занять место.</p>
+
+    <p><strong>В третьем наборе</strong> входных данных мы можем впускать людей на шоу в таком порядке:</p>
+
+    <p>Впустим третьего человека:</p>
+
+    <p>–	–	–	3	–	–	–</p>
+    <p>Впустим четвёртого человека:</p>
+
+    <p>–	–	–	3	4	–	–</p>
+    <p>Впустим пятого человека:</p>
+
+    <p>–	–	–	3	4	5	–</p>
+    <p>Впустим первого человека:</p>
+
+    <p>–	–	1	3	4	5	–</p>
+    <p>Впустим второго человека:</p>
+
+    <p>–	2	1	3	4	5	–</p>
+    <p>Таким образом, все 5 человек заняли места.</p>
+
+    <p><strong>В пятом наборе</strong> входных данных мы можем впускать людей на шоу в таком порядке:</p>
+
+    <p>Впустим четвёртого человека:</p>
+
+    <p>–	–	–	–	4	–</p>
+    <p>Впустим третьего человека:</p>
+
+    <p>–	–	–	3	4	–</p>
+    <p>Впустим шестого человека, он покинет шоу, потому что занимает место третьим способом и должен сесть на место 4, но оно уже занято:</p>
+
+    <p>–	–	–	3	4	–</p>
+    <p>Впустим пятого человека:</p>
+
+    <p>–	–	5	3	4	–</p>
+    <p>Впустим первого человека:</p>
+
+    <p>–	1	5	3	4	–</p>
+    <p>Впустим второго человека:</p>
+
+    <p>2	1	5	3	4	–</p>
+    <p>Таким образом, 5 человек заняли места.</p>
+
+    <p><strong>В седьмом наборе</strong> входных данных мы можем впускать людей на шоу в таком порядке:</p>
+
+    <p>Впустим третьего человека:</p>
+
+    <p>3	–	–	–	–	–	–</p>
+    <p>Впустим четвёртого человека:</p>
+
+    <p>3	4	–	–	–	–	–</p>
+    <p>Впустим пятого человека:</p>
+
+    <p>3	4	5	–	–	–	–</p>
+    <p>Впустим шестого человека:</p>
+
+    <p>3	4	5	6	–	–	–</p>
+    <p>Впустим первого человека:</p>
+
+    <p>3	4	5	6	1	–	–</p>
+    <p>Впустим второго человека, он покинет шоу, потому что занимает место первым способом, но место 1 занято:</p>
+
+    <p>3	4	5	6	1	–	–</p>
+    <p>Таким образом, 5 человек заняли места.</p>
+  </details>
+
+  <details>
+    <summary>Ещё тесты</summary>
+
+    <h4>Тест 2</h4>
+<pre>
+33
+1 4
+1
+3 3
+-1 -2 -2
+5 2
+1 -1 -2 -2 -1
+4 3
+-1 -1 -1 -2
+3 1
+-2 -2 1
+2 5
+5 -2
+1 2
+-1
+5 4
+2 3 -2 1 -2
+4 5
+2 -2 -2 -2
+3 2
+1 -2 -1
+1 3
+3
+3 1
+-2 1 1
+2 5
+2 -1
+5 2
+1 -1 -1 -2 2
+5 5
+-1 1 -2 -2 1
+4 5
+-2 2 -2 -1
+3 4
+-1 -2 -1
+4 2
+1 2 1 2
+4 2
+-2 -2 1 -2
+5 2
+2 2 -2 1 2
+4 5
+4 -1 -1 -1
+1 4
+-2
+4 2
+-1 -2 -1 -2
+2 2
+-2 2
+4 1
+-2 -2 -1 -1
+4 3
+-1 3 -2 -2
+2 3
+-1 -2
+3 1
+-2 1 -1
+5 2
+-1 -2 1 -2 -1
+5 4
+3 -2 -1 1 -2
+5 2
+-1 -2 2 -1 2
+3 3
+-2 1 -1
+2 1
+-1 -1
 </pre>
+<code>1 2 2 3 1 2 1 4 4 2 1 1 2 2 3 4 2 2 2 2 4 1 2 2 1 3 1 1 2 4 2 2 1</code>
 
-  <h4>Примечание</h4>
-  <p>В первом наборе входных данных все люди хотят занять место 5, поэтому только 1 человек сможет занять место.</p>
+    <h4>Тест 4</h4>
+<pre>
+1
+100 120
+-1 72 18 -1 5 -2 70 -1 -1 18 -2 33 93 -1 -2 -2 -2 -2 78 114 -2
+65 -2 -1 74 48 16 70 63 -2 94 118 61 108 40 48 105 73 113 103
+75 16 22 53 -1 62 47 -2 2 16 56 117 74 102 92 -1 79 98 28 120
+72 113 31 43 -1 4 84 58 92 41 44 45 -1 67 -1 -2 -2 -2 35 45 -1
+66 119 -1 84 -1 49 97 -2 84 103 10 -2 33 22 112 -1 38 118 65
+</pre>
+    <code>83</code>
+  </details>
 
-  <p>Во втором наборе входных данных людей можно впустить в порядке 1,2,3,4, тогда все люди, кроме последнего, смогут занять место.</p>
+  <h4>Тест</h4>
+<pre>
+2
+6 6
+2 5 -1 -1 -2 -2
+8 10
+2  9 -1 -1 -1 -2 -2 -2
+</pre>
+  <code>5 6</code>
 
-  <p>В третьем наборе входных данных мы можем впускать людей на шоу в таком порядке:</p>
+  <h4>Тест</h4>
+<pre>
+2
+7 5
+3 -1 -1 -1 -2 -2 -2
+8 6
+3 -1 -1 -1 -2 -2 -2 -2
+</pre>
+  <code>5 6</code>
 
-  <p>Впустим третьего человека:</p>
+  <details>
+    <summary>Решение за O(n)</summary>
+    <p>Посчитаем количество человек с первым способом cnt1, со вторым способом cnt2, с третьим способом cnt3.</p>
+    <p>Если с третьим способом никого нет, то людей можно рассадить только первым или только вторым, выбираем из них максимум.</p>
+    <p>Если с третьим способом кто-нибудь есть, то нужно рассмотреть четыре варианта и выбрать из них максимум. Каждый вариант это простой проход по циклу, поэтому <strong>сложность O(n)</strong></p>
+    <p>1 вариант. начинаем сажать слева первым способом учитывая занятые места</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
 
-  <p>–	–	–	3	–	–	–</p>
-  <p>Впустим четвёртого человека:</p>
+using namespace std;
 
-  <p>–	–	–	3	4	–	–</p>
-  <p>Впустим пятого человека:</p>
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
 
-  <p>–	–	–	3	4	5	–</p>
-  <p>Впустим первого человека:</p>
+  // ввод данных
+  int t;
+  cin >> t;
 
-  <p>–	–	1	3	4	5	–</p>
-  <p>Впустим второго человека:</p>
+  while (t--) {
+    int n, m;
+    cin >> n >> m;
 
-  <p>–	2	1	3	4	5	–</p>
-  <p>Таким образом, все 5 человек заняли места.</p>
+    // все места в зале
+    // 1 - занято
+    // 0 - свободно
+    vector&lt;int&gt; A(m + 1, 0);
 
-  <p>В пятом наборе входных данных мы можем впускать людей на шоу в таком порядке:</p>
+    int cnt1 = 0, cnt2 = 0, cnt3 = 0;
+    int tmp;
 
-  <p>Впустим четвёртого человека:</p>
+    // заполняем входные данные
+    for (int i = 0; i &lt; n; i++) {
+      cin >> tmp;
+      if (tmp == -1) {
+        cnt1++;
+      } else if (tmp == -2) {
+        cnt2++;
+      } else if (tmp &lt;= m && A[tmp] == 0) {
+        A[tmp] = 1;
+        cnt3++;
+      }
+    }
 
-  <p>–	–	–	–	4	–</p>
-  <p>Впустим третьего человека:</p>
+    // решение
+    int res = 0;
 
-  <p>–	–	–	3	4	–</p>
-  <p>Впустим шестого человека, он покинет шоу, потому что занимает место третьим способом и должен сесть на место 4, но оно уже занято:</p>
+    // если третим способом никого нет
+    // то можно посадить только слева или справа
+    // выберем из них максимум
+    if (cnt3 == 0) {
+      res = max(cnt1, cnt2);
 
-  <p>–	–	–	3	4	–</p>
-  <p>Впустим пятого человека:</p>
+      // результат не может быть больше числа мест
+      res = min(res, m);
 
-  <p>–	–	5	3	4	–</p>
-  <p>Впустим первого человека:</p>
+      // если третим способом кто-то есть
+      // то рассмотрим 4 варианта
+    } else {
 
-  <p>–	1	5	3	4	–</p>
-  <p>Впустим второго человека:</p>
+      // 3 вариант
+      // учитывая занятые места
+      int cnt1a = cnt1;
+      int res3 = 0;
+      int res30 = 0;
+      int prev = 0;
+      int next = m + 1;
+      for (int i = 1; i &lt;= m; i++) {
+        // начинаем сажать слева первым способом
+        if (A[i] == 0 && cnt1a > 0) {
+          res3++;
+          cnt1a--;
+        }
+        // предыдущее занятое место
+        if (A[i] == 1 && cnt1a > 0) {
+          res30 = res3;
+          prev = i;
+        }
+        // следующее занятое место
+        if (A[i] == 1 && cnt1a == 0) {
+          next = i;
+          break;
+        }
+      }
+      int cnt2a = cnt2;
+      int res31 = 0;
+      for (int i = prev + 1; i &lt;= m; i++) {
+        // начинаем сажать справа вторым способом
+        if (A[i] == 0 && cnt2a > 0) {
+          res31++;
+          cnt2a--;
+        }
+      }
+      cnt2a = cnt2;
+      int res32 = 0;
+      for (int i = next + 1; i &lt;= m; i++) {
+        // начинаем сажать справа вторым способом
+        if (A[i] == 0 && cnt2a > 0) {
+          res32++;
+          cnt2a--;
+        }
+      }
+      res3 = cnt3 + max(res30 + res31, res3 + res32);
 
-  <p>2	1	5	3	4	–</p>
-  <p>Таким образом, 5 человек заняли места.</p>
+      // 4 вариант
+      // учитывая занятые места
+      cnt2a = cnt2;
+      int res4 = 0;
+      int res40 = 0;
+      prev = m + 1;
+      next = 0;
+      for (int i = m; i > 0; i--) {
+        // начинаем сажать справа вторым способом
+        if (A[i] == 0 && cnt2a > 0) {
+          res4++;
+          cnt2a--;
+        }
+        // предыдущее занятое место
+        if (A[i] == 1 && cnt2a > 0) {
+          res40 = res4;
+          prev = i;
+        }
+        // следующее занятое место
+        if (A[i] == 1 && cnt2a == 0) {
+          next = i;
+          break;
+        }
+      }
+      cnt1a = cnt1;
+      int res41 = 0;
+      for (int i = prev - 1; i > 0; i--) {
+        // начинаем сажать слева первым способом
+        if (A[i] == 0 && cnt1a > 0) {
+          res41++;
+          cnt1a--;
+        }
+      }
+      cnt1a = cnt1;
+      int res42 = 0;
+      for (int i = next - 1; i > 0; i--) {
+        // начинаем сажать слева первым способом
+        if (A[i] == 0 && cnt1a > 0) {
+          res42++;
+          cnt1a--;
+        }
+      }
+      res4 = cnt3 + max(res40 + res41, res4 + res42);
 
-  <p>В седьмом наборе входных данных мы можем впускать людей на шоу в таком порядке:</p>
+      res = max(res, max(res3, res4));
+      res = min(res, m);
+    }
 
-  <p>Впустим третьего человека:</p>
-
-  <p>3	–	–	–	–	–	–</p>
-  <p>Впустим четвёртого человека:</p>
-
-  <p>3	4	–	–	–	–	–</p>
-  <p>Впустим пятого человека:</p>
-
-  <p>3	4	5	–	–	–	–</p>
-  <p>Впустим шестого человека:</p>
-
-  <p>3	4	5	6	–	–	–</p>
-  <p>Впустим первого человека:</p>
-
-  <p>3	4	5	6	1	–	–</p>
-  <p>Впустим второго человека, он покинет шоу, потому что занимает место первым способом, но место 1 занято:</p>
-
-  <p>3	4	5	6	1	–	–</p>
-  <p>Таким образом, 5 человек заняли места.</p>
+    // вывод результата
+    std::cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1824,6 +2355,57 @@ int main() {
 45 50 50
 </pre>
   <code>3</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n, m, k;
+  cin >> n >> m >> k;
+  long long t;
+  cin >> t;
+  vector&lt;int&gt; A(n, 0);
+  vector&lt;int&gt; B(m, 0);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+  for (int i = 0; i &lt; m; i++) {
+    cin >> B[i];
+  }
+
+  // решение
+  int res = 0;
+  int pA = 0;
+  sort(A.begin(), A.end());
+  sort(B.begin(), B.end());
+  for (int i = 0; i &lt; m && pA &lt; n; i++) {
+    for (int j = 0; j &lt; k && pA &lt; n; j++) {
+      while (pA &lt; n && A[pA] &lt; B[i] - t) {
+        pA++;
+      }
+      if (pA &lt; n && A[pA] &lt;= B[i] + t) {
+        res++;
+        pA++;
+      }
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
