--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -215,7 +215,30 @@
   </li>
   <li class="yellow">2025.04.14 пн
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 130-140стр
-    <br>2. <strong>Книга</strong> <i>1985 Керниган - Язык программирования Си. 281с</i> прочитать 220-230стр
+    <br>2. <strong>Книга</strong> <i>1985 Керниган - Язык программирования Си. 281с</i> прочитать 220-281стр и закончить
     <br>3. <strong>Курс</strong> <i>яндекс.хендбук основы C++</i> сделать конспект 2.8
+    <br>4. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 991 записать условия задач
+  </li>
+  <li class="yellow">2025.04.15 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 140-150стр
+    <br>2. <strong>Книга</strong> <i>2007 Яновский - Компьютерные игры на языке программирования Си. 126с</i> прочитать 1-126стр и закончить
+    <br>3. <strong>Курс</strong> <i>яндекс.хендбук основы C++</i> начать конспект 2.9
+    <br>4. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> занятие 22 записать условия задач
+    <br>5. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> занятие 23 записать условия задач
+    <br>6. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 995 начать записывать условия задач
+  </li>
+  <li class="yellow">2025.04.16 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 150-170стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 995 закончить записывать условия задач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 998 записать условия задач
+    <br>4. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 22 начать
+  </li>
+  <li class="yellow">2025.04.17 чт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 170-190стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 22 закончить
+  </li>
+  <li class="yellow">2025.04.18 пт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 190-210стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1003 записать условия задач
   </li>
 </ol>
