--- a/src/components/alg/alg-conspect/sp/pages/elem-spRound988.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-spRound988.html
@@ -6,7 +6,7 @@
 
 
 <article class="article">
-  <h1>Контест Round 988 (Div.4)</h1>
+  <h1>Контест Round 988 (Div.3)</h1>
   <p><a href="https://codeforces.com/contest/2037" target="_blank">Codeforces Round 988 (Div.3)</a></p>
 </article>
 
@@ -80,6 +80,46 @@
   <p>Во втором тесте Кинич может выполнить одну операцию с i = 1 и j = 2.</p>
 
   <p>В четвертом тесте Кинич может выполнить одну операцию с i = 1 и j = 4.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  int test; //количество тестов
+  cin >> test;
+
+  //все тесты обрабатываем по отдельности
+  for (int t = 0; t &lt; test; t++) {
+    int n;
+    cin >> n;
+    //частотный массив
+    vector&lt;int&gt; B(n + 1);
+
+    //подсчет сколько раз мы встретили каждое число
+    for (int i = 0; i &lt; n; i++) {
+      int tmp;
+      cin >> tmp;
+      B[tmp]++;//увеличение значения на 1
+    }
+    int res = 0;//переменная, где хранится ответ
+
+    //Догадаемся, что, если мы хотим максимизировать ответ.
+    //Необходимо посчитать количество пар с одинаковыми числами.
+    for (int i = 0; i &lt; B.size(); i++) {
+      // подсчет количества пар, где элементы
+      // в паре равняются i
+      res += B[i] / 2;
+    }
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -144,6 +184,70 @@
   <code>4 5 6</code>
   <code>7 8 9</code>
   <code>9 10 11</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  int test;//количество тестов
+  cin >> test;
+
+  //каждый тест отдельно друг от друга
+  for (int t = 0; t &lt; test; t++)	{
+    int k;//количество элементов
+    cin >> k;
+    int n, m;//переменные для ответа
+
+    //все элементы в тесте непревосходят k.
+    // Сделаем частотный массив
+    vector&lt;int&gt; A(k + 1);
+    int tmp;
+    for (int i = 0; i &lt; k; i++) {
+      cin >> tmp;
+      A[tmp]++;
+    }
+    // размер прямоугольника, который мы ищим n*m
+    int mult = k - 2;
+    //пробежимся по массиву
+    for (int i = 1; i &lt;= k; i++) {
+      if (A[i] != 0) {
+        //проверим что i может быть стороной прямоугольника
+        if (mult % i == 0) {
+          // проверка что mult != i*i
+          if (i != mult / i) {
+            // находим второе число
+            // если оно было в массиве то ответ найден
+            if (A[mult / i] != 0) {
+              n = i;
+              m = mult / i;
+              break;
+            }
+          } else {
+            //если i * i == mult
+            if (A[i] > 1)	{
+              n = i;
+              m = i;
+              break;
+            }
+          }
+        }
+      }
+    }
+    cout &lt;&lt; n &lt;&lt; " " &lt;&lt; m &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -185,6 +289,74 @@
   <p>В первом примере можно показать, что любая перестановка размера 3 содержит два смежных элемента, сумма которых является простым числом. Например, в перестановке [2,3,1] сумма 2+3=5 является простым числом.</p>
 
   <p>Во втором примере мы можем проверить, что пример вывода верен, потому что 1+8, 8+7, 7+3, 3+6, 6+2, 2+4 и 4+5 все составные. Могут быть и другие правильные конструкции.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  int test;//количество тестов
+  cin >> test;
+
+  //обработка тестов
+  for (int t = 0; t &lt; test; t++) {
+    //в этой задаче нужно было придумать
+    // последовательность элементов утверждение:
+    // если a[i] и a[i+1] четные то их сумма
+    // четная и является составным числом
+    // если a[i] и a[i+1] нечетные то их сумма
+    // четная и является составным числом
+    // давайте сначала выведем все нечетные
+    // числа, а потом четные числа.
+    // тогда нам придется придумать комбинацию
+    // специальных чисел в середине массива
+    // пусть это будет число 5 и 4 их сумма
+    // дает 9 составное число
+		int n;
+    cin >> n;
+    //утверждение при n &lt; 5 невозможно создать последовательность
+    if (n &lt; 5) {
+      cout &lt;&lt; "-1\n";
+    } else {
+      vector&lt;int&gt; A;
+      vector&lt;int&gt; B;
+
+      //массив нечетных чисел
+      for (int i = 1; i &lt;= n; i += 2) {
+        if (i != 5)
+          A.push_back(i);
+      }
+      A.push_back(5);
+      B.push_back(4);
+
+      //массив четных чисел
+      for (int i = 2; i &lt;= n; i += 2) {
+        if (i != 4)
+          B.push_back(i);
+      }
+      //вывод массива нечетных чисел
+      for (int i = 0; i &lt; A.size(); i++) {
+        cout &lt;&lt; A[i] &lt;&lt; " ";
+      }
+      //вывод массива четных чисел
+      for (int i = 0; i &lt; B.size(); i++) {
+        cout &lt;&lt; B[i] &lt;&lt; " ";
+      }
+      cout &lt;&lt; '\n';
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -261,6 +433,109 @@
  <p>Во втором наборе входных данных она не может перепрыгнуть первое препятствие.</p>
 
   <p>В четвертом наборе входных данных, собрав оба усиления, она сможет перепрыгнуть препятствие.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  int test;
+  cin >> test;
+  //сложная задача на тему обработка событий или сканирующая прямая
+  for (int t = 0; t &lt; test; t++) {
+    //все входные параметры
+    long long n, m, L;
+    cin >> n >> m >> L;
+    vector&lt;pair&lt;long long, long long&gt; &gt; A(n);
+
+    for (int i = 0; i &lt; n; i++) {
+      cin >> A[i].first >> A[i].second;
+    }
+    vector&lt;pair&lt;long long, long long&gt; &gt; B(m);
+    for (int i = 0; i &lt; m; i++) {
+      cin >> B[i].first >> B[i].second;
+    }
+
+    //нам требуется поддерживать правило
+    // лучших улучшений для этого требуется
+    // структура данных multiset
+    // multiset хранит элементы всегда в отсортированном порядке
+    multiset&lt;long long&gt; mst;
+
+    long long res = 0;//ответ
+
+    int ukA = 0;//указатель на массив А
+    int ukB = 0;//указатель на массив В
+    long long v = 1;//прыжок
+    //невозможность перепрыгнуть отрезок (если станет false)
+    bool flag = true;
+
+    while (true) {
+      // преодалели все отрезки
+      if (A.size() == ukA) {
+        break;
+      // есть еще отрезки препятствия
+      }	else {
+        // есть еще улучшения прыжка
+        if (B.size() != ukB) {
+          // проверяем что встретим раньше улучшение или отрезок
+          if (B[ukB].first &lt; A[ukA].first) {
+            long long tmp;// добавляем усиленеи в multiset
+            tmp = -B[ukB].second;
+            mst.insert(tmp);
+            ukB++;
+          } else {
+            //проверяем хватит ли прыжка
+            if (A[ukA].second - A[ukA].first + 1 >= v) {
+              //не хватает
+              //нет усилений мы проиграли
+              if (mst.size() == 0) {
+                flag = false;
+                break;
+              //берем самое сильное усиление из списка которые у нас есть
+              } else {
+                v -= *mst.begin();
+                mst.erase(mst.begin());
+                res++;
+              }
+            } else {//силы прыжка хватило без усилений
+              ukA++;
+            }
+          }
+        } else {//нет усилений на пути
+          if (A[ukA].second - A[ukA].first + 1 >= v) {
+            if (mst.size() == 0) {//нет усилений мы проиграли
+              flag = false;
+              break;
+            } else {//берем самое сильное усиление из списка которые у нас есть
+              v -= *mst.begin();
+              mst.erase(mst.begin());
+              res++;
+            }
+          } else {//силы прыжка хватило без усилений
+            ukA++;
+          }
+        }
+      }
+    }
+
+    if (flag)//вывод ответа
+      cout &lt;&lt; res &lt;&lt; '\n';
+    else
+      cout &lt;&lt; "-1\n";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -298,7 +573,6 @@
   <code>«? l r» (1 ≤ l &lt; r ≤ n)</code>
 
   <p>Жюри вернёт целое число f(l,r).</p>
-
 
   <p>Когда вы будете готовы напечатать ответ, выведите одну строку в следующем формате</p>
   <ul>
@@ -371,6 +645,118 @@
   <p>Однако обратите внимание, что строки 00 и 11 обе имеют ответ 0, и невозможно различить между ними. Поэтому мы сообщаем IMPOSSIBLE.</p>
 
   <p>Обратите внимание, что этот пример служит только для демонстрации формата взаимодействия. Он не гарантирует, что предоставленные запросы являются оптимальными или однозначно определяют ответ. Тем не менее, можно показать, что существует последовательность из не более чем 5 запросов, которая однозначно определяет пример теста 1.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include&lt;iostream&gt;
+#include&lt;vector&gt;
+
+using namespace std;
+
+int main()
+{
+	//#ifdef _DEBUG
+		//freopen("input.txt", "rt", stdin);
+		//freopen("output.txt", "wt", stdout);
+	//#endif
+	int test;
+	cin >> test;
+	//сложная интерактивная задача
+	//заметим что нам разрешено делать n запросов
+	for (int t = 0; t &lt; test; t++)
+	{
+		int n;
+		cin >> n;
+
+		vector&lt;int&gt; Res(n + 1, -1);//массив ответа
+		vector&lt;int&gt; A(n + 1, 0);//массив последовательности
+		for (int r = 2; r &lt;= n; r++)//задаем кучу запросов формата 1 r. Дальше мы будем узнавать информацию в позиции r
+		{
+			int tmp;
+			cout &lt;&lt; "? 1 " &lt;&lt; r &lt;&lt; '\n';
+			fflush(stdout);
+			cin >> tmp;
+			A[r] = tmp;
+		}
+		bool flag = true;// проверка, что можем собрать последовательность
+		if (A[n] == 0)// ситуация в которой строка либо куча 000000000000 либо 111111111111 мы не можем определить
+		{
+			flag = false;
+		}
+		for (int i = n; i > 1; i--)//пойдем собирать нашу последовательность с конца
+		{
+			// мы можем определить по значению двух соседей i i-1 отличаются они или нет элемент в позиции i
+			if (A[i] > 0)
+			{
+				if (A[i] - A[i - 1] > 0) // если отличаются то мы берем 1
+				{
+					Res[i] = 1;
+				}
+				else// если не отличаются то мы берем 0
+				{
+					Res[i] = 0;
+				}
+			}
+		}
+
+		int uk = 0;// остается доопределить начало. Для этого найдем первую позицию в массиве A отличную от 0
+		for (int i = 1; i &lt;= n; i++)
+		{
+			if (A[i] > 0)
+			{
+				uk = i;
+				break;
+			}
+		}
+		if (uk > 0)
+		{//если мы нашли позицию то мы точно можем сказать что в позиции uk стоит 1 и перед ней есть какое то количество 0 и 1
+			// более того сначала стоят 1 а потом стоят 0
+			//количество 0 равняется значению count
+			int pos = uk - 1;
+			int count = A[uk];
+			for (int i = pos; i >= 1; i--)
+			{
+				if (count > 0)
+				{
+					count--;
+					Res[i] = 0;
+				}
+				else
+				{
+					Res[i] = 1;
+				}
+			}
+			//как итог сформировали всю последовательность сначала ее хвост, потом голову
+		}
+
+
+		if (flag)
+		{
+			string otv = "! ";//формируем свой ответ как единую строку
+
+			for (int i = 1; i &lt;= n; i++)
+			{
+				if (Res[i] == 0)
+				{
+					otv += "0";
+				}
+				else
+				{
+					otv += "1";
+				}
+			}
+			cout &lt;&lt; otv &lt;&lt; '\n';
+			fflush(stdout);
+		}
+		else {
+			cout &lt;&lt; "! IMPOSSIBLE" &lt;&lt; '\n';//не смогли построить ответ
+			fflush(stdout);
+		}
+	}
+}
+</pre>
+  </details>
 </article>
 
 
