--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -41,5 +41,6 @@
   <p><a href="lec-15.html" class="js-dsr-lecture">Лекция 15 (11.03.2025)</a></p>
   <p><a href="lec-16.html" class="js-dsr-lecture">Лекция 16 (25.03.2025)</a></p>
   <p><a href="lec-17.html" class="js-dsr-lecture">Лекция 17 (01.04.2025)</a></p>
+  <p><a href="lec-18.html" class="js-dsr-lecture">Лекция 18 (17.04.2025)</a></p>
 </article>
 
